# client_server

./: CMakeLists.txt  README.md
cmake/: targets.cmake
src/: CMakeLists.txt  client.cpp  server.cpp
src/networking/: CMakeLists.txt
src/networking/include/networking/: Client.h  Server.h
src/networking/src/: Client.cpp  Server.cpp
